--- a/views/client/home/index.ejs
+++ b/views/client/home/index.ejs
@@ -503,7 +503,7 @@
     }
 
     if(mess && mess == 2){
-        alert('Thanh toán thành công!');
+        alert('Đặt hàng thành công!');
     }
 
     if(mess && mess == 3){
