--- a/views/client/donhang/donhang.ejs
+++ b/views/client/donhang/donhang.ejs
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        .checkout-form-list .error {
+            color: red;
+        }
+    </style>
 <%- include ('../partials/head'); -%>
     <body>
         <div class="app">
@@ -8,7 +13,7 @@
                 <div class="checkout-area mb-70">
                     <div class="container">
                         <div class="row">
-                            <form action="/donhang/savethongtin" method="post">
+                            <form action="/donhang/savethongtin" method="post" id="formDonHang">
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 mt-20">
                                     <div class="checkbox-form">
                                         <h3>Chi tiết hóa đơn</h3>
@@ -22,33 +27,38 @@
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                 <div class="checkout-form-list">
                                                     <label>Số điện thoại <span class="required">*</span></label>
-                                                    <input type="number" placeholder="0898xxxxxx" id="phone" name="phone">
+                                                    <input type="text" placeholder="0898xxxxxx" id="phone" name="phone">
+                                                    <span id="messphone" style="color: red;"></span>
                                                 </div>
                                             </div>
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                 <div class="checkout-form-list">
                                                     <label>Địa chỉ <span class="required">*</span></label>
                                                     <input type="text" id="address" name="address">
+                                                    
                                                 </div>
                                             </div>
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                 <div class="checkout-form-list">
                                                     <label>Email <span class="required">*</span></label>
-                                                    <input type="email" id="email" name="email">
+                                                    <input type="text" id="email" name="email">
+                                                    <span id="messemail" style="color: red;" ></span>
                                                 </div>
+                                               
                                             </div>
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                 <div class="checkout-form-list">
-                                                    <textarea style="resize:none;" class="form-control" placeholder="Ghi chú" id="note" name="note" required=""></textarea>
+                                                    <textarea style="resize:none;" class="form-control" placeholder="Ghi chú" id="note" name="note" ></textarea>
                                                 </div>
                                             </div>
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                 <div class="checkout-form-list">
                                                     <label>Hình thức giao hàng <span class="required">*</span></label>
                                                     <select class="form-control" id="giaohang" name="giaohang">
-                                                        <option>Chọn hình thức giao hàng</option>
+                                                        <option value="">Chọn hình thức giao hàng</option>
                                                         <option value="0" name="checkgiaohang">Thanh toán khi nhận hàng</option>
                                                         <option value="1" name="checkgiaohang">Thanh toán qua thẻ MOMO</option>
+                                                        <option value="2" name="checkgiaohang">Thanh toán qua thẻ VNPAY</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -124,6 +134,67 @@
         if (mess && mess != '') {
             alert(mess);
         }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+    <script>
+        $("#formDonHang").validate({
+            rules: {
+                name: {
+                    required: true,
+                },
+                phone: {
+                    required: true,
+                    phone: function (el) {
+                        var vnf_regex = /((09|03|07|08|05)+([0-9]{8})\b)/g;
+                        var phone = el.value;
+                        if (phone !== '') {
+                            if (vnf_regex.test(phone) == false) {
+                                $('#messphone').html('Số điện thoại không hợp lệ')
+                            } else {
+                                $('#messphone').html('');
+                            }
+                        }
+                    }
+                },
+                address: {
+                    required: true,
+                },
+                email: {
+                    required: true,
+                    email: function (elmail) {
+                        var vnf_regexmail = /^(([^<>()[\]\.,;:\s@\"]+(\.[^<>()[\]\.,;:\s@\"]+)*)|(\".+\"))@(([^<>()[\]\.,;:\s@\"]+\.)+[^<>()[\]\.,;:\s@\"]{2,})$/i;
+                        var email = elmail.value;
+                        if (email !== '') {
+                            if (vnf_regexmail.test(email) == false) {
+                                $('#messemail').html('Email không hợp lệ');
+                            } else {
+                                $('#messemail').html('');
+                            }
+                        }
+                    }
+                },
+                giaohang: {
+                    required: true,
+                },
+            },
+            messages: {
+                name: {
+                    required: 'Họ và tên không được để trống',
+                },
+                phone: {
+                    required: 'Số điện thoại không được để trống',
+                },
+                address: {
+                    required: 'Địa chỉ không được để trống',
+                },
+                email: {
+                    required: 'Địa chỉ email không được để trống',
+                },
+                giaohang: {
+                    required: 'Chọn hình thức giao hàng',
+                },
+            }
+        });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/scriptjs@2.5.9/dist/script.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4/dist/algoliasearch-lite.umd.js"></script>
