--- a/views/client/lienhe/lienhe.ejs
+++ b/views/client/lienhe/lienhe.ejs
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        .single-form-3 .error {
+            color: red;
+        }
+    </style>
 <%- include ('../partials/head'); -%>
 
     <body>
@@ -60,12 +65,14 @@
                                             </div>
                                             <div class="col-lg-12">
                                                 <div class="single-form-3">
-                                                    <input name="phone" type="phone" placeholder="Số điện thoại">
+                                                    <input name="phone" type="text" placeholder="Số điện thoại">
+                                                    <span id="messphone" style="color: red; font-weight: bold;"></span>
                                                 </div>
                                             </div>
                                             <div class="col-lg-12">
                                                 <div class="single-form-3">
-                                                    <input name="email" type="email" placeholder="Email">
+                                                    <input name="email" type="text" placeholder="Email">
+                                                    <span id="messemail" style="color: red; font-weight: bold;" ></span>
                                                 </div>
                                             </div>
                                             <div class="col-lg-12">
@@ -98,5 +105,66 @@
         if(mess){
             alert(mess)
         }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+    <script>
+        $("#contact-form").validate({
+            rules: {
+                name: {
+                    required: true,
+                },
+                phone: {
+                    required: true,
+                    phone: function (el) {
+                        var vnf_regex = /((09|03|07|08|05)+([0-9]{8})\b)/g;
+                        var phone = el.value;
+                        if (phone !== '') {
+                            if (vnf_regex.test(phone) == false) {
+                                $('#messphone').html('Số điện thoại không hợp lệ')
+                            } else {
+                                $('#messphone').html('');
+                            }
+                        }
+                    }
+                },
+                email: {
+                    required: true,
+                    email: function (elmail) {
+                        var vnf_regexmail = /^(([^<>()[\]\.,;:\s@\"]+(\.[^<>()[\]\.,;:\s@\"]+)*)|(\".+\"))@(([^<>()[\]\.,;:\s@\"]+\.)+[^<>()[\]\.,;:\s@\"]{2,})$/i;
+                        var email = elmail.value;
+                        if (email !== '') {
+                            if (vnf_regexmail.test(email) == false) {
+                                $('#messemail').html('Email không hợp lệ');
+                            } else {
+                                $('#messemail').html('');
+                            }
+                        }
+                    }
+                },
+                subject: {
+                    required: true,
+                },
+                message: {
+                    required: true,
+                },
+            },
+            messages: {
+                name: {
+                    required: 'Họ và tên không được để trống',
+                },
+                phone: {
+                    required: 'Số điện thoại không được để trống',
+                },
+                email: {
+                    required: 'Địa chỉ email không được để trống',
+                },
+                subject: {
+                    required: 'Tiêu đề không được để trống',
+                },
+                message: {
+                    required: 'Nội dung không được để trống',
+                },
+            }
+        });
     </script>
 </html>
