--- a/views/admin/partials/adminhead.ejs
+++ b/views/admin/partials/adminhead.ejs
@@ -1,5 +1,5 @@
 <head>
-    <base href="https://donghothoitrang.herokuapp.com/" />
+    <base href="http://localhost:3000/" />
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
