quan ly liên hê

--- a/views/admin/partials/adminleft.ejs
+++ b/views/admin/partials/adminleft.ejs
@@ -69,6 +69,17 @@
                 <li class="sub-menu">
                     <a href="javascript:;">
                         <i class="fa fa-book"></i>
+                        <span>Quản lý liên hệ</span>
+                    </a>
+                    <ul class="sub">
+						<li><a href="/admin/lienhe">Liên hệ</a></li>
+						
+                    </ul>
+                </li>
+
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class="fa fa-book"></i>
                         <span>Quản lý nhân viên</span>
                     </a>
                     <ul class="sub">
