--- a/views/client/giaohang/giaohang.ejs
+++ b/views/client/giaohang/giaohang.ejs
@@ -12,19 +12,19 @@
                     </div>
                     <div class="progress">
                         <ul>
-                            <li>
+                            <li >
                                 <img src="client/img/giaohang/choxacnhan.png"/><br>
-                                <i class="fa fa-check"></i>
+                                <i class="fa fa-times" ></i>
                                 <p>Chờ xác nhận</p>
                             </li>
                             <li>
                                 <img src="client/img/giaohang/cholayhang.png"/><br>
-                                <i class="fa fa-check"></i>
+                                <i class="fa fa-times"></i>
                                 <p>Chờ lấy hàng</p>
                             </li>
                             <li>
                                 <img src="client/img/giaohang/danggiao.png"/><br>
-                                <i class="fa fa-refresh"></i>
+                                <i class="fa fa-times"></i>
                                 <p>Đang giao</p>
                             </li>
                             <li>
