--- a/views/client/donhang/donhang.ejs
+++ b/views/client/donhang/donhang.ejs
@@ -98,7 +98,7 @@
                                                         <td>
                                                             <ul>
                                                                 <li>
-                                                                    <label>Miễn phí vận chuyển</label>
+                                                                    <label>Phí vẫn chuyển</label>
                                                                 </li>
                                                             </ul>
                                                         </td>
