--- a/views/admin/addonhang/updatestatus.ejs
+++ b/views/admin/addonhang/updatestatus.ejs
@@ -32,7 +32,17 @@
                                         <td><%= donhang.tonghoadon %></td>
                                         <td><%= donhang.ghichu %></td>
                                         <td><%= donhang.phuongthucthanhtoan == 1 ? 'Đã thanh toán': 'Chưa thanh toán' %></td>
-                                        <td id="<%= donhang.mahd %>"><%= donhang.trangthai == 1 ? 'Đã xử lý': 'Chưa xử lý' %></td>
+                                        <td id="<%= donhang.mahd %>">
+                                            <% if(donhang.trangthai == 1) {%>
+                                                <%= 'Đã xử lý' %>
+                                            <% }else if(donhang.trangthai == 2) { %>
+                                                <%= 'Đơn hàng đã hủy' %>
+                                            <% }else if(donhang.trangthai == 3) {%>
+                                                <%= 'Đang xử lý' %>
+                                             <%} else {%>
+                                                <%= 'Chưa xử lý'%>
+                                            <% } %>      
+                                        </td>
                                         <td><%= donhang.tgtao %></td>
                                     </tr>
                                 </table>
@@ -40,10 +50,11 @@
                                 <h4>Cập nhật tình trạng đơn hàng</h4><br>
                                 <select id="<%= donhang.mahd %>" class="form-control" name="xuly" onchange="changeStatus(this) ">
                                     <option value="-1">--Chọn tình trạng--</option>
-                                    <option value="1" >Đã xử lý</option>
-                                    <option value="0">Chưa xử lý</option>
+                                    <option value="1" <%= donhang.trangthai == 1 ? 'selected' : '' %> >Đã xử lý</option>
+                                    <option value="3" <%= donhang.trangthai == 3 ? 'selected' : '' %> >Đang xử lý</option>
+                                    <option value="0" <%= donhang.trangthai == 0 ? 'selected' : '' %>>Chưa xử lý</option>
                                 </select><br>
-                                <input type="button" onclick="updateStatusBill()" value="Cập nhật đơn hàng" name="capnhatdonhang" class="btn btn-success"><br/>
+                                <input type="button" onclick="updateStatusBill()" value="Cập nhật đơn hàng" name="capnhatdonhang" class="btn btn-success <%= donhang.trangthai == 2 ? 'hidden' : '' %> %>"><br/>
                                 <br/>
                                 <a href="admin/donhang">Quay lại?</a>
                             </div>
@@ -76,8 +87,9 @@
                         if(data && data.statusCode == 1){
                             if(status == 0){
                                 $(`#${idDH}`).html('Chưa xử lý');
-                            }
-                            else{
+                            }else if(status == 3){
+                                $(`#${idDH}`).html('Đang xử lý');
+                            }else{
                                 $(`#${idDH}`).html('Đã xử lý');
                             }
                         }
