chuc nang doi mat khau

--- a/views/client/canhan/canhan.ejs
+++ b/views/client/canhan/canhan.ejs
@@ -54,6 +54,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <a href="doimatkhau">Đổi mật khẩu</a>
                                         <div class="single-register" align="center">
                                             <input class="btn-login" type="submit" name="btn btn-primary" value="Cập nhật">
                                         </div>
