--- a/views/client/donhang/donhang.ejs
+++ b/views/client/donhang/donhang.ejs
@@ -93,16 +93,16 @@
                                                         <th id="tonggiohang">Tổng giỏ hàng</th>
                                                         <td><span class="amount"><%= totalAmount %></span></td>
                                                     </tr>
-                                                    <tr class="shipping">
+                                                    <!-- <tr class="shipping">
                                                         <th>Vận chuyển</th>
                                                         <td>
                                                             <ul>
                                                                 <li>
-                                                                    <label>Phí vẫn chuyển</label>
+                                                                    <label>Miễn phí vận chuyển</label>
                                                                 </li>
                                                             </ul>
                                                         </td>
-                                                    </tr>
+                                                    </tr> -->
                                                     <tr class="order-total">
                                                         <th >Tổng đơn hàng</th>
                                                         <input type="hidden"  name="tonggiohang" value="<%= totalAmount %>" />
